--- a/app.json
+++ b/app.json
@@ -1,11 +1,15 @@
 {
   "expo": {
-    "name": "ethio-news-mobile",
-    "slug": "ethio-news-mobile",
+    "name": "ethio-news",
+    "slug": "ethio-news",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "androidStatusBar": {
+      "backgroundColor": "#2e5b71",
+      "translucent": true
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
