--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "expo": "^51.0.24",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
+    "moment-duration-format": "^2.3.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
