--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "^51.0.24",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.24",
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
