--- a/app.json
+++ b/app.json
@@ -6,18 +6,13 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "androidStatusBar": {
-      "backgroundColor": "#2e5b71",
-      "translucent": true
-    },
+    "permissions": ["INTERNET"],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
