--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ethio-news",
+    "name": "Ethiopian News",
     "slug": "ethio-news",
     "version": "1.0.0",
     "orientation": "portrait",
