Added figtree font to the app

--- a/app.json
+++ b/app.json
@@ -6,7 +6,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "permissions": ["INTERNET"],
+    "permissions": [
+      "INTERNET"
+    ],
     "androidStatusBar": {
       "backgroundColor": "#fff",
       "translucent": true
@@ -16,7 +18,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -45,6 +49,9 @@
     },
     "updates": {
       "url": "https://u.expo.dev/f0b90088-cdb3-4249-90d6-a1d652479b6d"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
