--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "3.31.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
-    "@expo/vector-icons": "^14.0.3"
+    "@expo/vector-icons": "^14.0.3",
+    "expo-font": "~12.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
