--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -17,6 +18,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "^51.0.24",
+    "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.24",
     "moment": "^2.30.1",
@@ -26,12 +28,11 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2",
-    "@expo/vector-icons": "^14.0.3",
-    "expo-font": "~12.0.10"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
