--- a/package.json
+++ b/package.json
@@ -11,28 +11,33 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.24",
-    "expo-font": "~12.0.10",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.24",
+    "expo": "^52.0.27",
+    "expo-font": "~13.0.3",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.26.13",
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-auth-session": "~6.0.2",
+    "expo-crypto": "~14.0.2",
+    "expo-web-browser": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
